# OS_Course_Assignments

./: .gitignore  README.md  bc2.txt  input.txt  main.c  q1.c  q2.c  s.sh  s2.sh
Assignment 4/q1/: q1.c  q1_test.c
Assignment1/: make_zip.sh
Assignment1/2019101050_Assignment1/: Q1.c  Q2.c  README.md
Assignment1/helper_files/: backup.txt  bc2.txt  first  input2.txt  s.sh  s2.sh  second
Assignment2/: README.md  make_submission.sh
Assignment2/2019101050_assgn2/: README.md  ls.h  nightswatch.c  shell  shell.c  util.c  zombie_killer.c
Assignment2/Src/: headers.h  history_handler.c  history_handler.h  ls.c  makefile  nightswatch.c  nightswatch.h  pinfo.c  pinfo.h  process_maker.c  process_maker.h  s.sh  s2.sh  sd  shell  shell.c  util.c  util.h  zombie_killer.c  zombie_killer.h
Assignment2/Src/helper-files/: a.c  p1.c  p2.c  p3.c
Assignment2/Src/tf/: d.c
Assignment3/: make_submission.sh
Assignment3/2019101050/: README.md  env_var.c  env_var.h  headers.h  parser.c  parser.h  pinfo.c  process_maker.c  s  shell  shell.c  util.c  util.h  zombie_killer.c
Assignment3/scr/: README.md  history_handler.c  pinfo.c  s.sh  shell  util.h  zombie_killer.h
Assignment3/src/: Makefile  env_var.c  input_handler.c  input_handler.h  ls.c  nightswatch.c  parser.c  parser.h  pinfo.c  process_maker.c  process_maker.h  s2.sh  sd  shell  shell.c  util.c  util.h  zombie_killer.c
Assignment3/src/sandbox/: a-a  a.txt  a.txy  asdf  b.txt  c.txt  e.txt  f.txt  fdsf  file.txt  grep  h.txt  in.txt  lines.txt  lpl  ls.txt  m.txt  oo.txt  out5  s.txt  sortedlines.txt  t
Assignment4/: make_sub.sh
Assignment4/2019101050/q1/: README.md  q1.c
Assignment4/2019101050/q2/: README.md  q2.c
Assignment4/2019101050/q3/: README.md  q3.c
Assignment4/q1/: README.md  a.sh  b.sh  b.txt  cc.txt  clear_mem.sh  data.txt  diff.txt  input  input.cpp  input.txt  normal  normal_msort.c  normal_out.txt  out2.txt  out3.txt  q1  q1.c  q1_2  q1_2.c  q1_3  q1_3.c  q1_n  q1_og  q1_og.c  q1_test.c
Assignment4/q1/garbage/: a.txt  input  input.txt  q1  q1_ashwin.c
Assignment4/q1/tutorial_4_codes/: inpit  mutex.c  qsort.c  semaphore.c  thread_basic.c  tt
Assignment4/q2/: README.md  a.sh  b.txt  input.txt  input_min.txt  q2  q2.c  q2_sync.c
Assignment4/q3/: README.md  a.out  a.sh  input.txt  input2.txt  input3.txt  input4.txt  q3  q3.c
Assignment5/: CMakeLists.txt  README.md  make_sub.sh  result
Assignment5/2019101050-xv6/: README.md
Assignment5/2019101050-xv6/xv6/: MLFQ.c  RR.c  benchmark.c  cc.sh  data2.csv  graphmaking.ipynb  ps.c  setPriority.c  syscall.c  syscall.h  usys.S
Assignment5/xv6/: FCFS.c  MLFQ.c  Makefile  PBS.c  REPORT.md  RR.c  \  a.txt  benchmark.c  cc.sh  data.csv  defs.h  gm.c  graphmaking.ipynb  ls.c  proc.c  proc.h  syscall.c  syscall.h  sysproc.c  time.c  trap.c  user.h  usys.S
Assignment6/: CMakeLists.txt
Assignment6/client/: a.out  b.sh
Assignment6/codes/: Makefile  README.md  client  client.c  header.c  header.h  server  server.c
Assignment6/codes 2/: Makefile  header.c  server.c
Assignment6/server/: a.out  b.sh  gen.py
